--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,9 @@ button {
     cursor: pointer;
     font-family: "Roboto", sans-serif;
 }
+img {
+    display: block;
+}
 
 .visually-hidden {
     position: absolute;
@@ -227,7 +230,7 @@ display: flex;
 
 .our-team { 
     background-color: #f4f4fd;
-    padding: 120px;
+    padding: 120px 0;
 }
 
 .our-team-title {
